--- a/style.css
+++ b/style.css
@@ -1,10 +1,10 @@
 
 @font-face {
-  font-family: 'Montserrat';
+  font-family: 'Montserrat', sans-serif;
 }
 
 html {
-  font-family: 'Montserrat';
+  font-family: 'Montserrat', sans-serif;
   font-weight: 500;
 }
 
