--- a/style.css
+++ b/style.css
@@ -4,11 +4,17 @@
   font-weight: 500;
 }
 
+@font-face {
+  font-family: 'Montserrat', sans-serif;
+  font-weight: 900;
+}
+
 html {
   font-family: 'Montserrat', sans-serif;
   font-weight: 500;
 }
 
-body {
+h1 {
   font-family: 'Montserrat';
+  font-weight: 900;
 }
