--- a/style.css
+++ b/style.css
@@ -29,6 +29,13 @@ h1 {
   padding-bottom: 4vw;
 }
 
+h2 {
+  background-color: #f24f09;
+  margin-left: -14%;
+  padding-left: 14%;
+  margin-top: 8%;
+}
+
 p {
   text-align: justify;
   text-shadow: 0px 0px 10px rgb(0,0,0);
