--- a/style.css
+++ b/style.css
@@ -54,6 +54,8 @@ a:hover {
   background-color: #434b4f;
   margin: 0 -15%;
   padding: 0 14%;
+  margin-bottom: -10px;
+  padding-bottom: 10px;
 }
 
 .tophead {
