--- a/style.css
+++ b/style.css
@@ -61,23 +61,23 @@ a:hover {
 .tophead {
   padding-right: 15%;
   margin-right: -15%;
+  margin-top: 0;
 }
 
 .navbar {
     background-color:#363636;
-    position: fixed;
+    position: sticky;
     top: 0;
-    width: 100%;
-    margin-left: -11%;
+    width: 100vw;
+    margin-left: -11vw;
+    padding-top: 1vw;
+    padding-bottom: 1vw;
 }
 
 .navbar a {
-    float: left;
     color: #ffffff;
     text-align: center;
     padding: 14px 16px;
-    text-decoration: none;
-    font-family: 'Montserrat', Arial;
   }
 
 .navbar a:hover {
