--- a/style.css
+++ b/style.css
@@ -31,8 +31,8 @@ h1 {
 
 h2 {
   background-color: #f24f09;
-  margin-left: -14%;
-  padding-left: 14%;
+  margin-left: -11vw;
+  padding-left: 11vw;
   margin-top: 8%;
 }
 
@@ -53,7 +53,7 @@ a:hover {
 .content {
   background-color: #434b4f;
   margin: 0 -15%;
-  padding: 0 14%;
+  padding: 0 15%;
   margin-bottom: -10px;
   padding-bottom: 10px;
 }
