--- a/style.css
+++ b/style.css
@@ -36,6 +36,12 @@ h2 {
   margin-top: 8%;
 }
 
+h3 {
+  font-family: 'Montserrat';
+  font-weight: 500;
+  font-style: italic;
+}
+
 p {
   text-align: justify;
   text-shadow: 0px 0px 10px rgb(0,0,0);
