undo colour change

--- a/style.css
+++ b/style.css
@@ -40,7 +40,6 @@ h3 {
   font-family: 'Montserrat';
   font-weight: 500;
   font-style: italic;
-  color:#424f09;
 }
 
 p {
@@ -108,4 +107,5 @@ a:hover {
 .nobox {
   background: none;
   font-weight: 500;
+  color: #f24f09;
 }
