--- a/style.css
+++ b/style.css
@@ -104,3 +104,14 @@ a:hover {
   font-weight: 500;
   color: #f24f09;
 }
+
+li {
+  padding: 0.2em;
+}
+
+.small {
+  font-size: 8vw;
+  margin-top: -8vw;
+  margin-bottom: -2vw;
+  text-align: center;
+}
